# synthesis

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  Aardvark-HEL.vcxproj  Aardvark-Unity-2-stable-csharp.sln  Aardvark-Unity-2-stable.sln  Aardvark-Unity-2-stable.userprefs  Aardvark-Unity-csharp.sln  Aardvark-Unity.sln  Aardvark-Unity.userprefs  Aardvark-WPILib.sln  All-WPILib.sdf.REMOVED.git-id  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Autodesk BXD Game Simulator.docx  BM.cpp  BXDA.cpp  BXDA.h  BinaryRWObject.cpp  BinaryRWObject.h  Build.exe.REMOVED.git-id  CONTRIBUTING.md  CustomHandlers.cpp  CustomHandlers.h  CustomTypes.cpp  CustomTypes.h  EUI.cpp  EUI.h  Exporter.cpp  Exporter.h  FusionSynth.cpp  FusionSynth.dylib  FusionSynth.manifest  FusionSynth.sln  FusionSynth.vcxproj  FusionSynthV2.cpp  FusionSynthV2.manifest  FusionSynthV2.sln  (+41 more)
cef/: .gitignore  CMakeLists.txt  LICENSE.txt  build.bat  build.sh  index.html  package-lock.json  package.json  vite.config.ts
cef/Synthesis.CEF/: CEFRuntime.cs  Synthesis.CEF.csproj
cef/Synthesis.CEF/Core/Classes.g/: CEFApp.cs  CEFCommandLine.cs  (+1 more)
cef/Synthesis.CEF/Exceptions/: CEFCallMismatch.cs
cef/Synthesis.CEF/Interop/: libcef.cs  version.cs
cef/SynthesisCEF/: CEF.cs
cef/SynthesisCEF.Tests/: CefWrapper.cs  SynthesisCEF.Tests.csproj
cef/cef/: CMakeLists.txt
cef/cef/inc/: app_factory.h  client.h  client_manager.h  client_util.h
cef/cef/include/: mac_main.cpp  run_browser.h
cef/cef/internal/: browser_app.h  client.h  client_manager.h  core.h  shared_main.h
cef/cef/shared/: CMakeLists.txt
cef/cef/src/: browser_app.cpp  client.cpp  client_mac.mm  client_manager.cpp  client_util.cpp  client_util_win.cpp  main.cpp  main_mac.mm  process_helper_mac.cpp  run_browser_mac.mm
cef/cef/standalone/: CMakeLists.txt
cef/cef/wrapper/: CMakeLists.txt
cef/cmake/: DownloadCEF.cmake
cef/public/: index.html
cef/tests/: CMakeLists.txt
cef/tests/cef/: CMakeLists.txt
emulation/Minerva/Minerva/: .gitignore  CMakeLists.txt  Channel.h  FunctionSignature.cpp  FunctionSignature.h  Handler.cpp  Handler.h  Makefile  Minerva.cpp  Minerva.vcxproj  MinervaGenerator.cpp  MinervaGenerator.h  Test.cpp  Test.h  Util.cpp
emulation/cerebrum/: .gitignore  CMakeLists.txt
emulation/cerebrum/docs/: Doxyfile
emulation/cerebrum/include/: roborio.h
emulation/cerebrum/src/: analog_input.cpp  analog_output.cpp  digital_io.cpp  pwm.cpp  spi.cpp
emulation/hel/: .clang_complete  .gitignore  CMakeLists.txt  HAL.sln  Makefile  README.md  clean.sh  download_vm.sh  run_vm.sh  wpilib.patch
emulation/hel/WindowsFormsApp1/: WindowsFormsApp1.sln
emulation/hel/benchmarks/: json_util_benchmark.cpp  receive_data_benchmark.cpp  send_data_benchmark.cpp  serialize.cpp
emulation/hel/build-tool/: Makefile
emulation/hel/buildroot/: .config
emulation/hel/docs/: Doxyfile
emulation/hel/external-configs/: .buildroot-config  config.patch  ctre-includes.patch  ctre-src.patch  gradle.patch  gtest_arm.cmake  win_frc_comm.patch
emulation/hel/external_configs/: .config  ctre.patch  gradle.patch  grpc.patch
emulation/hel/include/: accelerometer.hpp  accumulator.hpp  alarm.hpp  analog_inputs.hpp  analog_outputs.hpp  bounds_checked_array.h  bounds_checked_array.hpp  can_bus.hpp  can_device.hpp  can_motor_controller.hpp  counter.hpp  digital_system.hpp  encoder.hpp  encoder_manager.hpp  engine_interface.h  engine_interface.hpp  error.h  error.hpp  fpga_encoder.hpp  global.hpp  instrumentation.hpp  interrupt_manager.hpp  joystick.hpp  json_util.h  json_util.hpp  match_info.hpp  mxp_data.h  mxp_data.hpp  net_comm.hpp  pcm.hpp  pdp.hpp  power.hpp  pwm_system.hpp  receive_data.h  receive_data.hpp  relay_system.hpp  roborio.h  roborio.hpp  roborio_interface.h  roborio_manager.hpp  (+18 more)
emulation/hel/lib/: WPILibVersion.cpp
emulation/hel/scripts/: S90FRCUserProgram  build_grpc.sh  check_if_built.sh  clone_asio.sh  clone_ctre.sh  deploy.sh  deploy_libraries.sh  deploy_user_program.sh  doc_to_script.sh  docker_runner.sh  download_vm.sh  frc_program_chooser.sh  frc_program_runner.sh  gen_grpc.sh  login.sh  receieve_data.sh  run_user_program.sh  start_robot_code.sh  stop_robot_code.sh  test.sh  watch_data.py
emulation/hel/src/: .#robot_output_service.cpp  accelerometer.cpp  accumulator.cpp  alarm.cpp  analog_input.cpp  analog_input_calibration.cpp  analog_output.cpp  analog_trigger.cpp  can.cpp  can_comm.cpp  can_device.cpp  can_motor_controller.cpp  comm.cpp  counter.cpp  digital_io.cpp  digital_system.cpp  dma_manager.cpp  encoder.cpp  encoder_manager.cpp  error.cpp  fpga_encoder.cpp  generate_libwpi.cpp  global.cpp  init.cpp  interrupt.cpp  interrupt_manager.cpp  joystick.cpp  json_util.cpp  match_info.cpp  mxp_data.cpp  net_comm.cpp  pcm.cpp  pdp.cpp  power.cpp  pwm.cpp  pwm_system.cpp  receive_data.cpp  relay.cpp  relay_system.cpp  roborio.cpp  (+16 more)
emulation/hel/tests/: accelerometer_test.cpp  analog_input_test.cpp  bounds_checked_array_test.cpp  can_test.cpp  digital_systems_test.cpp  encoder_test.cpp  json_util_test.cpp  pwm_test.cpp  receive_data_test.cpp  robot_inputs_test.cpp  robot_outputs_test.cpp  send_data_test.cpp  testing.hpp  util_test.cpp
exporter/SynthesisFusionAddin/: .gitignore  Package.py  README.md  Synthesis.manifest  Synthesis.py  config.ini  config_default.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-mypy.txt  requirements.txt
exporter/SynthesisFusionAddin/proto/: README.md  build.bat  build.sh  build_update.bat  deps.py  importer.py
exporter/SynthesisFusionAddin/src/: Dependencies.py  GlobalManager.py  Logging.py  Types.py  TypesTmp.py  Util.py  __init__.py  configure.py  flags.py  general_imports.py  logging.py  strings.py  temp_aps_logout.py  temp_file_upload.py  temp_upload_files.py
exporter/SynthesisFusionAddin/tools/: format.py  verifyIsortFormatting.py
web/engine/: .gitignore  CMakeLists.txt  Makefile  README.md  proto_build.bat
web/engine/include/: core.h  mira_assembly.h
web/engine/js/: locateFile.js
web/engine/src/: core.cpp  mira_assembly.cpp  physics.cpp  test.cpp
(+8724 files in other folders)
